--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -11,7 +11,9 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "from sm_wrapper import SMWrapper\n",
+    "from preprocessor import Preprocessor\n",
     "from sklearn.model_selection import train_test_split\n",
+    "from statsmodels.tsa.seasonal import MSTL\n",
     "\n",
     "seed = 12\n",
     "np.random.seed(seed)\n",
@@ -51,6 +53,18 @@
     "train_series = train_df.pivot(index='date', columns=[\"store_nbr\", \"family\"], values=[\"sales\", \"onpromotion\"])\n",
     "model = SMWrapper()\n",
     "model.fit(train_series['sales'].to_numpy(), exog=train_series['onpromotion'].to_numpy())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bd0e3231-5286-4607-87e8-92193ea2f524",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Prep = Preprocessor()\n",
+    "train_series = Prep.pivot(train_df)\n",
+    "Prep.reduce_to_stationarity(train_series[\"sales\"])"
    ]
   }
  ],
