--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -58,13 +58,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd0e3231-5286-4607-87e8-92193ea2f524",
+   "id": "40146975-6b64-4242-8b40-e2f5789297e4",
    "metadata": {},
    "outputs": [],
    "source": [
     "Prep = Preprocessor()\n",
-    "train_series = Prep.pivot(train_df)\n",
-    "Prep.reduce_to_stationarity(train_series[\"sales\"])"
+    "impute_series = Prep.impute(train_series)"
    ]
   }
  ],
