Finished model fitting, minor restructuring to avoid matching sklearn's interface as that does not suit time series

--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "eb718dc7-b890-40fe-93d7-8bc735d5257b",
    "metadata": {},
    "outputs": [],
@@ -10,8 +10,8 @@
     "import random\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from sm_wrapper import SMWrapper\n",
-    "from preprocessor import Preprocessor\n",
+    "from time import time\n",
+    "from model import ForecastingModel\n",
     "from sklearn.model_selection import train_test_split\n",
     "from statsmodels.tsa.seasonal import MSTL\n",
     "\n",
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "c362be08-5921-47b6-a0b6-4c02fe5c24ac",
    "metadata": {},
    "outputs": [],
@@ -33,37 +33,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "06860ba2-1a24-446a-a0fa-63aeb39891e8",
    "metadata": {},
    "outputs": [],
    "source": [
     "date_cutoff = df['date'].quantile(0.65)\n",
-    "train_df = df.loc[df['date'] < date_cutoff, :]\n",
+    "train_df = df.loc[df['date'] < date_cutoff, :].drop(\"id\", axis=1)\n",
     "test_df = df.loc[df['date'] >= date_cutoff, :]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ea8905c8-83fc-48f5-898e-45480c4ff32b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_series = train_df.pivot(index='date', columns=[\"store_nbr\", \"family\"], values=[\"sales\", \"onpromotion\"])\n",
-    "model = SMWrapper()\n",
-    "model.fit(train_series['sales'].to_numpy(), exog=train_series['onpromotion'].to_numpy())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "40146975-6b64-4242-8b40-e2f5789297e4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Prep = Preprocessor()\n",
-    "impute_series = Prep.impute(train_series)"
    ]
   }
  ],
