Separated out multivariate STL, added seasonal estimation

--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -10,10 +10,11 @@
     "import random\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import matplotlib\n",
     "from time import time\n",
     "from model import ForecastingModel\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from statsmodels.tsa.seasonal import MSTL\n",
+    "from multi_stl import MultiSTL\n",
     "\n",
     "seed = 12\n",
     "np.random.seed(seed)\n",
@@ -42,6 +43,36 @@
     "train_df = df.loc[df['date'] < date_cutoff, :].drop(\"id\", axis=1)\n",
     "test_df = df.loc[df['date'] >= date_cutoff, :]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "2ed2b973-93e5-414b-a714-a20e98ee24b8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = ForecastingModel()\n",
+    "model.fit(train_df, \"date\", \"sales\", \"onpromotion\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "02a8e387-e8b4-483a-a35a-d5f01fd789dd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(365,)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   }
  ],
  "metadata": {
