--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -15,6 +15,8 @@
     "from model import ForecastingModel\n",
     "from sklearn.model_selection import train_test_split\n",
     "from multi_stl import MultiSTL\n",
+    "from statsmodels.api import add_constant\n",
+    "from statsmodels.regression.linear_model import OLS\n",
     "\n",
     "seed = 12\n",
     "np.random.seed(seed)\n",
@@ -41,7 +43,7 @@
    "source": [
     "date_cutoff = df['date'].quantile(0.65)\n",
     "train_df = df.loc[df['date'] < date_cutoff, :].drop(\"id\", axis=1)\n",
-    "test_df = df.loc[df['date'] >= date_cutoff, :]"
+    "test_df = df.loc[df['date'] >= date_cutoff, :].drop(\"id\", axis=1)"
    ]
   },
   {
@@ -54,25 +56,6 @@
     "model = ForecastingModel()\n",
     "model.fit(train_df, \"date\", \"sales\", \"onpromotion\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "02a8e387-e8b4-483a-a35a-d5f01fd789dd",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(365,)"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
   }
  ],
  "metadata": {
