Added model code, very slow

--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -17,6 +17,7 @@
     "from multi_stl import MultiSTL\n",
     "from statsmodels.api import add_constant\n",
     "from statsmodels.regression.linear_model import OLS\n",
+    "from cProfile import Profile\n",
     "\n",
     "seed = 12\n",
     "np.random.seed(seed)\n",
@@ -43,7 +44,9 @@
    "source": [
     "date_cutoff = df['date'].quantile(0.65)\n",
     "train_df = df.loc[df['date'] < date_cutoff, :].drop(\"id\", axis=1)\n",
-    "test_df = df.loc[df['date'] >= date_cutoff, :].drop(\"id\", axis=1)"
+    "test_df = df.loc[df['date'] >= date_cutoff, :].drop(\"id\", axis=1)\n",
+    "\n",
+    "train_df = train_df[train_df['store_nbr'] < 2]"
    ]
   },
   {
@@ -54,7 +57,25 @@
    "outputs": [],
    "source": [
     "model = ForecastingModel()\n",
-    "model.fit(train_df, \"date\", \"sales\", \"onpromotion\")"
+    "with Profile() as profile:\n",
+    "    model.fit(train_df, \"date\", \"sales\", \"onpromotion\")\n",
+    "    print(f\"{fib(35) = }\")\n",
+    "    (\n",
+    "        Stats(profile)\n",
+    "        .strip_dirs()\n",
+    "        .sort_stats(SortKey.CALLS)\n",
+    "        .print_stats()\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "36dc4cc5-1dc2-4234-9a6f-a882a79494a7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.models"
    ]
   }
  ],
